<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nour.ieeeevent.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/connectedToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:gravity="center"
            android:text="@string/you_re_connected_to"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fileNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/file_name"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connectedToText"  />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/techne_event"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/fileNameText"
            app:layout_constraintBottom_toBottomOf="@id/fileNameText"
            app:layout_constraintTop_toTopOf="@id/fileNameText" />


        <TextView
            android:id="@+id/changeSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/change_sheet"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#0371C5"

            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/fileNameText"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toTopOf="@+id/fileNameText"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_170sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/scan_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeSheet" />

        <ImageView
            android:id="@+id/scannerButton"
            android:layout_width="@dimen/_123sdp"
            android:layout_height="@dimen/_105sdp"
            app:layout_constraintBottom_toTopOf="@+id/scanQRText"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
            app:layout_constraintStart_toStartOf="@+id/rectangle_1"
            app:srcCompat="@drawable/photo_camera" />

        <TextView
            android:id="@+id/scanQRText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/scan_qr"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/rectangle_1" />

        <TextView
            android:id="@+id/attendNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:gravity="center"
            android:text="@string/attendee_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

        <TextView
            android:id="@+id/attendNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/_30sdp"
            android:text="@{viewModel.uiState.attender.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/attendNameText"
            app:layout_constraintTop_toTopOf="@id/attendNameText"
            app:layout_constraintBottom_toBottomOf="@id/attendNameText"
            />

        <TextView
            android:id="@+id/vibText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vip"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"

            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendNameText"
             />

        <TextView
            android:id="@+id/vibTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.uiState.attender.VIP}"
            app:layout_constraintStart_toEndOf="@+id/vibText"
            app:layout_constraintTop_toTopOf="@+id/vibText"
            app:layout_constraintBottom_toBottomOf="@+id/vibText"
          />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>